Add EneriqsUserAdministration Project

--- a/UIAdmin/UIAdmin.csproj
+++ b/UIAdmin/UIAdmin.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Title>Eneriqs Authorization Management</Title>
+    <Company>Eneriqs</Company>
   </PropertyGroup>
 
   <ItemGroup>
