Add ECC Data Loader amd {rpviders. Add SystemController, not working from .NET Client

--- a/UIAdmin/App.config
+++ b/UIAdmin/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="urlServer" value="https://localhost:7021/" />
+		<add key="urlServerDev" value="https://localhost:7021/" />
+		<add key="urlServer" value="https://usermanageradm.azurewebsites.net/" />
 		<add key="requestTimeoutSec" value="5" />
 		<add key="serilog:using:File" value="Serilog.Sinks.File" />
 		<add key="serilog:write-to:File.path" value="log/logUIAdmin-.log" />
